add meta tags for links preview

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="BeatsFlow" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://beatsflow.fr" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:description" content="Beatsflow est une marketplace pour les beatmakers qui permet d'accroître leur visibilité." />
+    <meta property="og:site_name" content="BeatsFlow" />
     <meta name="description" content="Beatsflow est une marketplace pour les beatmakers qui permet d'accroître leur visibilité." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
