FIX meta tags for links preview

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="BeatsFlow" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://beatsflow.fr" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="https://beatsflow.fr/logo192.png" />
     <meta property="og:description" content="Beatsflow est une marketplace pour les beatmakers qui permet d'accroître leur visibilité." />
     <meta property="og:site_name" content="BeatsFlow" />
     <meta name="description" content="Beatsflow est une marketplace pour les beatmakers qui permet d'accroître leur visibilité." />
